--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "react-calendar-frame",
   "version": "0.0.0",
   "description": "scaffolding for creating a calendar in react",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "esbuild": "^0.15.7"
+  }
 }
